@@ -125,6 +125,7 @@
       spaces such as C:\Program Files\perl\bin\perl.  Unfortunately,
       Test::Harness needs fixed as well.  RT#448
     * Added DESTDIR to make repacking easier.
+    * $(*PREFIX) are returned to the INSTALL* variables.
 
 6.05 Tue Aug 27 16:09:51 PDT 2002
     - Output format of the hint file verbose diagnostic is now in
